--- a/static/profile.html
+++ b/static/profile.html
@@ -298,7 +298,7 @@
                                                     <span class="font-medium">8.7</span>
                                                 </div>
                                             </div>
-                                            <p class="text-gray-600 mb-3">Иван Иванов, Петр Петров • Опубликовано: 15.05.2023</p>
+                                            <p class="text-gray-600 mb-3">Иван Иванов, Петр Петров • Опубликовано: 15.05.2025</p>
                                             <p class="text-gray-700 mb-4">
                                                 Исследование новых методов мониторинга морских экосистем в условиях изменения климата. 
                                                 Представлены результаты пятилетнего исследования в Баренцевом море с использованием...
@@ -346,7 +346,7 @@
                                                     <span class="font-medium">9.2</span>
                                                 </div>
                                             </div>
-                                            <p class="text-gray-600 mb-3">Иван Иванов, Сергей Сергеев • Опубликовано: 10.03.2023</p>
+                                            <p class="text-gray-600 mb-3">Иван Иванов, Сергей Сергеев • Опубликовано: 10.03.2025</p>
                                             <p class="text-gray-700 mb-4">
                                                 Анализ современных методов устойчивого рыболовства и их влияние на экосистему Баренцева моря. 
                                                 Предложена новая модель квотирования, позволяющая сохранить биоразнообразие...
@@ -846,7 +846,7 @@
                                     <div class="space-y-3">
                                         <div class="p-3 bg-gray-50 rounded-lg">
                                             <h4 class="font-medium">"Новые методы мониторинга морских экосистем"</h4>
-                                            <p class="text-gray-600 text-sm">Journal of Marine Biology, 2023</p>
+                                            <p class="text-gray-600 text-sm">Journal of Marine Biology, 2025</p>
                                             <p class="text-gray-700 text-sm mt-1">Иванов И.И., Петров П.П., Сергеев С.С.</p>
                                         </div>
                                         
@@ -886,16 +886,16 @@
                             Система ранжирования научных статей с использованием искусственного интеллекта для исследователей и академиков.
                         </p>
                         <div class="mt-6 flex space-x-4">
-                            <a href="#" class="text-gray-500 hover:text-[#2563eb] transition">
-                                <i class="fab fa-twitter text-xl"></i>
+                            <a href="t.me/maakzon" class="text-gray-500 hover:text-[#2563eb] transition">
+                                <i class="fab fa-telegram text-xl"></i>
                             </a>
-                            <a href="#" class="text-gray-500 hover:text-[#2563eb] transition">
-                                <i class="fab fa-facebook text-xl"></i>
+                            <a href="vk.com/maakzon" class="text-gray-500 hover:text-[#2563eb] transition">
+                                <i class="fab fa-vk text-xl"></i>
                             </a>
-                            <a href="#" class="text-gray-500 hover:text-[#2563eb] transition">
-                                <i class="fab fa-linkedin text-xl"></i>
+                            <a href="ya.ru" class="text-gray-500 hover:text-[#2563eb] transition">
+                                <i class="fab fa-yandex text-xl"></i>
                             </a>
-                            <a href="#" class="text-gray-500 hover:text-[#2563eb] transition">
+                            <a href="https://github.com/MrRedFoxxx/Rank_AI" class="text-gray-500 hover:text-[#2563eb] transition">
                                 <i class="fab fa-github text-xl"></i>
                             </a>
                         </div>
@@ -906,13 +906,11 @@
                         <div>
                             <h3 class="text-lg font-semibold text-gray-900 mb-4">Навигация</h3>
                             <ul class="space-y-3">
-                                <li><a href="#" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
+                                <li><a href="index.html" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
                                     <i class="fas fa-chevron-right text-xs mr-2 text-[#2563eb]"></i>Главная</a></li>
-                                <li><a href="#" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
+                                <li><a href="search.html" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
                                     <i class="fas fa-chevron-right text-xs mr-2 text-[#2563eb]"></i>Статьи</a></li>
-                                <li><a href="#" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
-                                    <i class="fas fa-chevron-right text-xs mr-2 text-[#2563eb]"></i>Рейтинги</a></li>
-                                <li><a href="#" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
+                                <li><a href="about.html" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
                                     <i class="fas fa-chevron-right text-xs mr-2 text-[#2563eb]"></i>О проекте</a></li>
                             </ul>
                         </div>
@@ -920,12 +918,10 @@
                         <div>
                             <h3 class="text-lg font-semibold text-gray-900 mb-4">Ресурсы</h3>
                             <ul class="space-y-3">
-                                <li><a href="#" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
-                                    <i class="fas fa-chevron-right text-xs mr-2 text-[#2563eb]"></i>Блог</a></li>
-                                <li><a href="#" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
-                                    <i class="fas fa-chevron-right text-xs mr-2 text-[#2563eb]"></i>Документация</a></li>
-                                <li><a href="#" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
-                                    <i class="fas fa-chevron-right text-xs mr-2 text-[#2563eb]"></i>API</a></li>
+                                <li><a href="https://www.deepseek.com/" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
+                                    <i class="fas fa-chevron-right text-xs mr-2 text-[#2563eb]"></i>API Поиска</a></li>
+                                <li><a href="https://neuroimg.art/" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
+                                    <i class="fas fa-chevron-right text-xs mr-2 text-[#2563eb]"></i>API Фото</a></li>
                                 <li><a href="#" class="text-gray-600 hover:text-[#2563eb] transition flex items-center">
                                     <i class="fas fa-chevron-right text-xs mr-2 text-[#2563eb]"></i>Поддержка</a></li>
                             </ul>
@@ -940,7 +936,7 @@
                                 </li>
                                 <li class="flex items-start">
                                     <i class="fas fa-phone mt-1 mr-3 text-[#2563eb]"></i>
-                                    <span class="text-gray-600">+7 (XXX) XXX-XX-XX</span>
+                                    <span class="text-gray-600">+7 (986) 744-46-29</span>
                                 </li>
                                 <li class="flex items-start">
                                     <i class="fas fa-map-marker-alt mt-1 mr-3 text-[#2563eb]"></i>
@@ -953,13 +949,8 @@
                 
                 <div class="border-t border-gray-300 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center">
                     <p class="text-gray-500 mb-4 md:mb-0 text-sm">
-                        © 2023 Rank AI. Все права защищены.
+                        © 2025 Rank AI. Все права защищены.
                     </p>
-                    <div class="flex space-x-6">
-                        <a href="#" class="text-gray-500 hover:text-[#2563eb] transition text-sm">Политика конфиденциальности</a>
-                        <a href="#" class="text-gray-500 hover:text-[#2563eb] transition text-sm">Условия использования</a>
-                        <a href="#" class="text-gray-500 hover:text-[#2563eb] transition text-sm">Cookie</a>
-                    </div>
                 </div>
             </div>
         </footer>
