--- a/static/admin.html
+++ b/static/admin.html
@@ -228,7 +228,7 @@
                                     <tr>
                                         <th>ID</th>
                                         <th>Имя</th>
-                                        <th>Email</th>
+                                        <th>Логин</th>
                                         <th>Роль</th>
                                         <th>Статус</th>
                                         <th>Действия</th>
@@ -332,8 +332,8 @@
                     <input type="text" name="last_name" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
                 </div>
                 <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-1">Email</label>
-                    <input type="email" name="email" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                    <label class="block text-sm font-medium text-gray-700 mb-1">Логин</label>
+                    <input type="text" name="login" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
                 </div>
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-1">Пароль</label>
@@ -551,7 +551,7 @@
                         tr.innerHTML = `
                             <td class="text-gray-600">${user.id}</td>
                             <td>${user.first_name} ${user.last_name}</td>
-                            <td>${user.email}</td>
+                            <td>${user.login}</td>
                             <td>
                                 <span class="px-2 py-1 rounded-full text-xs ${user.role === 'admin' ? 'bg-purple-100 text-purple-800' : 'bg-blue-100 text-blue-800'}">
                                     ${user.role}
@@ -642,7 +642,7 @@
                 const userData = {
                     first_name: formData.get('first_name'),
                     last_name: formData.get('last_name'),
-                    email: formData.get('email'),
+                    login: formData.get('login'),
                     password: formData.get('password'),
                     role: formData.get('role')
                 };
